finished data labeling, prepraring for comparing vader performance and created notebook for starting bert development, merging to dev and main

--- a/scripts/NLP_radio_processing/N00_data_labeling.ipynb
+++ b/scripts/NLP_radio_processing/N00_data_labeling.ipynb
@@ -988,8 +988,15 @@
     "## Conclussions of this notebook\n",
     "\n",
     "I created:\n",
-    "- ``radio_labeled_data.csv`` with all the data labeling being made.\n",
-    "-  ``radio_filtered.csv`` without the post-race radios."
+    "- ``radio_labeled_data.csv`` with all the data labeling being made and with post-race elimination.\n",
+    "-  ``radio_filtered.csv`` without the post-race radios.\n",
+    "\n",
+    "Now, we can proceed to:\n",
+    "\n",
+    "1. Make the comparisons of VADER sentiment analysis in ``N02 notebook``.\n",
+    "2. Proceed to make a new notebook, called ``N03_bert_sentiment.ipynb`` where two models will be trained:\n",
+    "    - BERT trained from scracth.\n",
+    "    - BERT with pre-trained weights and with fine-tuning with our radios."
    ]
   }
  ],
