--- a/scripts/NLP_radio_processing/N02_sentiment_analysis_vader.ipynb
+++ b/scripts/NLP_radio_processing/N02_sentiment_analysis_vader.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
        "True"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "0ee468d1-0fd1-42fd-b1e1-2c7dc382300a",
+       "ref": "29c5efce-7ba4-4a26-a649-3f5b8922925d",
        "rows": [
         [
          "0",
@@ -222,7 +222,7 @@
        "4       1   So settle into standard race management now Max.        NaN"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,13 +283,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f7ffb8731a864e05bcbec6c8ef683805",
+       "model_id": "8045a0a6c3744f84a3695e568222d1e5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "78a37bf2-0688-41af-afad-d80573081ecf",
+       "ref": "14071b2f-824c-47fe-9249-f881a1b7ad2e",
        "rows": [
         [
          "0",
@@ -539,7 +539,7 @@
        "4  1.000  0.000    0.0000  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -619,14 +619,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\victo\\AppData\\Local\\Temp\\ipykernel_11400\\3269159944.py:3: FutureWarning: \n",
+      "C:\\Users\\victo\\AppData\\Local\\Temp\\ipykernel_27532\\3269159944.py:3: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "30845d74-c9dc-4858-9b8c-68d71ae99db0",
+       "ref": "ba4505af-3e74-4ab1-8674-098e72356731",
        "rows": [
         [
          "383",
@@ -964,7 +964,7 @@
        "112      14  So there is a small chance of rain in about 10...    0.9118"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1013,7 +1013,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "fc60d6e0-78b8-41ea-8f01-9ebf74725551",
+       "ref": "1eabb948-462a-4222-bd4c-2fd7acb0b6ee",
        "rows": [
         [
          "46",
@@ -1184,7 +1184,7 @@
        "34        1  Is it gonna be like extreme tyre or Inter? Dif...    0.0000"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1196,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1233,7 +1233,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "b653a80e-fa56-4734-8d2c-df63861a1caa",
+       "ref": "d12c3666-e342-41e3-842b-76b559020702",
        "rows": [
         [
          "491",
@@ -1404,7 +1404,7 @@
        "510      77  Okay Valtteri, no more shifts, no more shifts,...   -0.6486"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1425,19 +1425,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sentiment analysis results saved to ../../outputs/week4/radios_sentiment_vader.csv\n"
+      "Sentiment analysis results saved to ../../outputs/week4/sentiment/radios_sentiment_vader.csv\n"
      ]
     }
    ],
    "source": [
-    "output_path = \"../../outputs/week4/radios_sentiment_vader.csv\"\n",
+    "output_path = \"../../outputs/week4/sentiment/radios_sentiment_vader.csv\"\n",
     "radio_data.to_csv(output_path, index = False)\n",
     "print(f\"Sentiment analysis results saved to {output_path}\")"
    ]
@@ -1453,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1504,7 +1504,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "aeabf48a-2e02-48e9-a84d-3b5c6c25eb44",
+       "ref": "5f1c6168-be71-405d-b1cb-9bb6279c511f",
        "rows": [
         [
          "0",
@@ -1570,7 +1570,7 @@
        "0          0.127667      0.376898  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1587,7 +1587,7 @@
     "}\n",
     "\n",
     "metrics_df = pd.DataFrame([metrics])\n",
-    "metrics_df.to_csv('../../outputs/week4/sentiment_metrics_vader.csv', index=False)\n",
+    "metrics_df.to_csv('../../outputs/week4/sentiment/sentiment_metrics_vader.csv', index=False)\n",
     "print(\"Summary metrics:\")\n",
     "metrics_df"
    ]
@@ -1648,6 +1648,259 @@
     "- Distribution of sentiment categories\n",
     "- Manual evaluation of a sample of predictions\n",
     "- If we create a labeled test set, we can calculate precision, recall, and F1 scores\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# New Chapter: comparison of VADER performance with the real dataset\n",
+    "\n",
+    "In this step, we will use `radio_labeled_data.csv` to see how VADER performed, comparing the percentages with our CSV file with the proper sentiment analysis stored on `sentiment_metrics_vader.csv`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "model",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "positive_percentage",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "neutral_percentage",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "negative_percentage",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "average_compound",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "std_compound",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "95b5debf-38ed-404d-94ae-26c73b614651",
+       "rows": [
+        [
+         "0",
+         "VADER",
+         "43.66729678638941",
+         "33.0812854442344",
+         "23.251417769376182",
+         "0.1276667296786389",
+         "0.376898266643089"
+        ]
+       ],
+       "shape": {
+        "columns": 6,
+        "rows": 1
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>positive_percentage</th>\n",
+       "      <th>neutral_percentage</th>\n",
+       "      <th>negative_percentage</th>\n",
+       "      <th>average_compound</th>\n",
+       "      <th>std_compound</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>VADER</td>\n",
+       "      <td>43.667297</td>\n",
+       "      <td>33.081285</td>\n",
+       "      <td>23.251418</td>\n",
+       "      <td>0.127667</td>\n",
+       "      <td>0.376898</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   model  positive_percentage  neutral_percentage  negative_percentage  \\\n",
+       "0  VADER            43.667297           33.081285            23.251418   \n",
+       "\n",
+       "   average_compound  std_compound  \n",
+       "0          0.127667      0.376898  "
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_labeled = pd.read_csv(\"../../outputs/week4/radio_clean/radio_labeled_data.csv\")\n",
+    "df_labeled.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "model",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "positive_percentage",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "neutral_percentage",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "negative_percentage",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "average_compound",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "std_compound",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "e707f94e-943f-4b32-9ae9-a280543bbb8f",
+       "rows": [
+        [
+         "0",
+         "VADER",
+         "43.66729678638941",
+         "33.0812854442344",
+         "23.251417769376182",
+         "0.1276667296786389",
+         "0.376898266643089"
+        ]
+       ],
+       "shape": {
+        "columns": 6,
+        "rows": 1
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>positive_percentage</th>\n",
+       "      <th>neutral_percentage</th>\n",
+       "      <th>negative_percentage</th>\n",
+       "      <th>average_compound</th>\n",
+       "      <th>std_compound</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>VADER</td>\n",
+       "      <td>43.667297</td>\n",
+       "      <td>33.081285</td>\n",
+       "      <td>23.251418</td>\n",
+       "      <td>0.127667</td>\n",
+       "      <td>0.376898</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   model  positive_percentage  neutral_percentage  negative_percentage  \\\n",
+       "0  VADER            43.667297           33.081285            23.251418   \n",
+       "\n",
+       "   average_compound  std_compound  \n",
+       "0          0.127667      0.376898  "
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_vader = pd.read_csv(\"../../outputs/week4/sentiment/sentiment_metrics_vader.csv\")\n",
+    "df_vader.head()"
    ]
   }
  ],
