--- a/scripts/NLP_radio_processing/N02_sentiment_analysis_vader.ipynb
+++ b/scripts/NLP_radio_processing/N02_sentiment_analysis_vader.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
        "True"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "29c5efce-7ba4-4a26-a649-3f5b8922925d",
+       "ref": "000fc477-f4e3-4fc4-8281-49d11c603e8f",
        "rows": [
         [
          "0",
@@ -222,7 +222,7 @@
        "4       1   So settle into standard race management now Max.        NaN"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,13 +283,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8045a0a6c3744f84a3695e568222d1e5",
+       "model_id": "d2e6e6c521a349e3a19fcd09f4b3fbe9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "14071b2f-824c-47fe-9249-f881a1b7ad2e",
+       "ref": "d143502e-ff40-4a2f-88ef-d199537c2aa6",
        "rows": [
         [
          "0",
@@ -539,7 +539,7 @@
        "4  1.000  0.000    0.0000  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -619,14 +619,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\victo\\AppData\\Local\\Temp\\ipykernel_27532\\3269159944.py:3: FutureWarning: \n",
+      "C:\\Users\\victo\\AppData\\Local\\Temp\\ipykernel_17252\\3269159944.py:3: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "ba4505af-3e74-4ab1-8674-098e72356731",
+       "ref": "7014329f-de98-4016-9535-a9fa02d2d75b",
        "rows": [
         [
          "383",
@@ -964,7 +964,7 @@
        "112      14  So there is a small chance of rain in about 10...    0.9118"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1013,7 +1013,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "1eabb948-462a-4222-bd4c-2fd7acb0b6ee",
+       "ref": "88711c61-d790-40e6-be0c-2e609c10edca",
        "rows": [
         [
          "46",
@@ -1184,7 +1184,7 @@
        "34        1  Is it gonna be like extreme tyre or Inter? Dif...    0.0000"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1196,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1233,7 +1233,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "d12c3666-e342-41e3-842b-76b559020702",
+       "ref": "8d5e421a-ad84-4f68-bb8f-6ee8b6ea8b05",
        "rows": [
         [
          "491",
@@ -1404,7 +1404,7 @@
        "510      77  Okay Valtteri, no more shifts, no more shifts,...   -0.6486"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1425,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1453,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1504,7 +1504,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "5f1c6168-be71-405d-b1cb-9bb6279c511f",
+       "ref": "8cfb8f12-cddb-40cd-a99d-8dc823f0338d",
        "rows": [
         [
          "0",
@@ -1570,7 +1570,7 @@
        "0          0.127667      0.376898  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1661,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1674,52 +1674,58 @@
          "type": "integer"
         },
         {
-         "name": "model",
+         "name": "driver",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "radio_message",
          "rawType": "object",
          "type": "string"
         },
         {
-         "name": "positive_percentage",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "neutral_percentage",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "negative_percentage",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "average_compound",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "std_compound",
-         "rawType": "float64",
-         "type": "float"
+         "name": "sentiment",
+         "rawType": "object",
+         "type": "string"
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "95b5debf-38ed-404d-94ae-26c73b614651",
+       "ref": "0ecd1067-7392-40a0-b081-18738473bb15",
        "rows": [
         [
          "0",
-         "VADER",
-         "43.66729678638941",
-         "33.0812854442344",
-         "23.251417769376182",
-         "0.1276667296786389",
-         "0.376898266643089"
+         "1",
+         "So don't forget Max, use your head please. Are we both doing it or what? You just follow my instruction. No, I want to know if both cars do it. Max, please follow my instruction and trust it. Thank you.",
+         "neutral"
+        ],
+        [
+         "1",
+         "1",
+         "Okay Max, we're expecting rain in about 9 or 10 minutes. What are your thoughts? That you can get there or should we box? We'd need to box this lap to cover Leclerc. I can't see the weather, can I? I don't know.",
+         "neutral"
+        ],
+        [
+         "2",
+         "1",
+         "You might find this lap that you meet a little bit more water.",
+         "neutral"
+        ],
+        [
+         "3",
+         "1",
+         "Just another two or three minutes to get through this.",
+         "neutral"
+        ],
+        [
+         "4",
+         "1",
+         "So settle into standard race management now Max.",
+         "neutral"
         ]
        ],
        "shape": {
-        "columns": 6,
-        "rows": 1
+        "columns": 3,
+        "rows": 5
        }
       },
       "text/html": [
@@ -1741,49 +1747,136 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>model</th>\n",
-       "      <th>positive_percentage</th>\n",
-       "      <th>neutral_percentage</th>\n",
-       "      <th>negative_percentage</th>\n",
-       "      <th>average_compound</th>\n",
-       "      <th>std_compound</th>\n",
+       "      <th>driver</th>\n",
+       "      <th>radio_message</th>\n",
+       "      <th>sentiment</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>VADER</td>\n",
-       "      <td>43.667297</td>\n",
-       "      <td>33.081285</td>\n",
-       "      <td>23.251418</td>\n",
-       "      <td>0.127667</td>\n",
-       "      <td>0.376898</td>\n",
+       "      <td>1</td>\n",
+       "      <td>So don't forget Max, use your head please. Are...</td>\n",
+       "      <td>neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Okay Max, we're expecting rain in about 9 or 1...</td>\n",
+       "      <td>neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>You might find this lap that you meet a little...</td>\n",
+       "      <td>neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Just another two or three minutes to get throu...</td>\n",
+       "      <td>neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>So settle into standard race management now Max.</td>\n",
+       "      <td>neutral</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   model  positive_percentage  neutral_percentage  negative_percentage  \\\n",
-       "0  VADER            43.667297           33.081285            23.251418   \n",
-       "\n",
-       "   average_compound  std_compound  \n",
-       "0          0.127667      0.376898  "
+       "   driver                                      radio_message sentiment\n",
+       "0       1  So don't forget Max, use your head please. Are...   neutral\n",
+       "1       1  Okay Max, we're expecting rain in about 9 or 1...   neutral\n",
+       "2       1  You might find this lap that you meet a little...   neutral\n",
+       "3       1  Just another two or three minutes to get throu...   neutral\n",
+       "4       1   So settle into standard race management now Max.   neutral"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_labeled = pd.read_csv(\"../../outputs/week4/radio_clean/radio_labeled_data.csv\")\n",
+    "\n",
+    "\n",
+    "# Count sentiment frequencies in the labeled data\n",
+    "labeled_sentiment_counts = df_labeled['sentiment'].value_counts()\n",
+    "\n",
+    "# Calculate percentages\n",
+    "total_messages = len(df_labeled)\n",
+    "labeled_sentiment_percentages = labeled_sentiment_counts / total_messages * 100\n",
+    "\n",
     "df_labeled.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labeled Data Sentiment Distribution:\n",
+      "sentiment\n",
+      "neutral     379\n",
+      "negative    101\n",
+      "positive     50\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Labeled Data Sentiment Percentages:\n",
+      "Percentage of neutral messages: 71.51%\n",
+      "Percentage of negative messages: 19.06%\n",
+      "Percentage of positive messages: 9.43%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Display results\n",
+    "print(\"Labeled Data Sentiment Distribution:\")\n",
+    "print(labeled_sentiment_counts)\n",
+    "print(\"\\nLabeled Data Sentiment Percentages:\")\n",
+    "for sentiment, percentage in labeled_sentiment_percentages.items():\n",
+    "    print(f\"Percentage of {sentiment} messages: {percentage:.2f}%\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Comparing with VADER sentiment analysis:\n",
+      "VADER - Positive: 43.67%, Neutral: 33.08%, Negative: 23.25%\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_vader = pd.read_csv(\"../../outputs/week4/sentiment/sentiment_metrics_vader.csv\")\n",
+    "\n",
+    "\n",
+    "# Compare with VADER sentiment analysis\n",
+    "print(\"\\nComparing with VADER sentiment analysis:\")\n",
+    "print(f\"VADER - Positive: {df_vader['positive_percentage'][0]:.2f}%, \"\n",
+    "      f\"Neutral: {df_vader['neutral_percentage'][0]:.2f}%, \"\n",
+    "      f\"Negative: {df_vader['negative_percentage'][0]:.2f}%\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1827,7 +1920,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "e707f94e-943f-4b32-9ae9-a280543bbb8f",
+       "ref": "46217670-260c-49b7-85cf-31f91612c290",
        "rows": [
         [
          "0",
@@ -1893,14 +1986,81 @@
        "0          0.127667      0.376898  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_vader = pd.read_csv(\"../../outputs/week4/sentiment/sentiment_metrics_vader.csv\")\n",
     "df_vader.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Difference between labeled data and VADER predictions:\n",
+      "Positive: -34.23%\n",
+      "Neutral: 38.43%\n",
+      "Negative: -4.19%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate difference between labeled data and VADER predictions\n",
+    "print(\"\\nDifference between labeled data and VADER predictions:\")\n",
+    "for sentiment in ['positive', 'neutral', 'negative']:\n",
+    "    labeled_pct = labeled_sentiment_percentages.get(sentiment, 0)\n",
+    "    vader_col = f\"{sentiment}_percentage\"\n",
+    "    vader_pct = df_vader[vader_col][0]\n",
+    "    print(f\"{sentiment.capitalize()}: {labeled_pct - vader_pct:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "# VADER vs. Manual Sentiment Analysis: Performance Comparison\n",
+    "\n",
+    "### Key Findings\n",
+    "- VADER overestimates positive sentiment in F1 radio communications (+34.23%).\n",
+    "- VADER underestimates neutral messages (-38.43%).\n",
+    "- Negative sentiment detection is fairly aligned (+4.19%).\n",
+    "\n",
+    "### Analysis of VADER Performance\n",
+    "**1. Technical Domain Language**  \n",
+    "- Specialized terms (e.g., \"box box\") lack inherent sentiment in VADER.\n",
+    "- Technical feedback appears neutral to humans but may be misclassified.\n",
+    "\n",
+    "**2. Context Misinterpretation**  \n",
+    "- Racing instructions (e.g., \"push now\") may be misclassified by VADER.\n",
+    "- Routine updates are neutral to humans but not to VADER.\n",
+    "\n",
+    "**3. Formula 1 Communication Style**  \n",
+    "- Messages are brief and focus on information exchange rather than sentiment.\n",
+    "- VADER applies general sentiment rules, missing contextual nuances.\n",
+    "\n",
+    "**4. Neutral Baseline Difference**  \n",
+    "- 71.51% of messages are neutral according to human annotation.\n",
+    "- VADER assumes more emotional content, misclassifying many factual messages.\n",
+    "\n",
+    "### Conclusions\n",
+    "- VADER is unsuitable for F1 radio sentiment analysis without customization.\n",
+    "- Domain-specific models are needed for motorsports communication.\n",
+    "- Manual labeling provides crucial ground truth.\n",
+    "- Future work should focus on fine-tuning language models for racing contexts.\n",
+    "\n",
+    "This comparison underscores the need for specialized sentiment analysis approaches in technical domains.\n",
+    "\n",
+    "There fore, a new sentiment analysis need to be made, more powerful. In the next notebook `N03_bert_sentiment.ipynb`, I will implement BERT from sracth and a fine-tuned BERT. "
    ]
   }
  ],
