added image and explanation of roberta model architecture

--- a/scripts/NLP_radio_processing/N03_bert_sentiment.ipynb
+++ b/scripts/NLP_radio_processing/N03_bert_sentiment.ipynb
@@ -31,12 +31,53 @@
     "2. **Strong contextual understanding**: F1 radio messages contain technical jargon, specialized terminology, and driver/team codes that require deep semantic understanding to interpret correctly.\n",
     "\n",
     "3. **Effective with specialized communications**: F1 radio messages typically feature:\n",
-    "   - Short, direct communications with minimal context\n",
-    "   - Technical terminology and abbreviations (e.g., \"box this lap\", \"DRS enabled\")\n",
-    "   - High-pressure communications with non-standard sentence structures\n",
-    "   - Team-specific codes and references\n",
+    "   - Short, direct communications with minimal context.\n",
+    "   - Technical terminology and abbreviations (e.g., \"box this lap\", \"DRS enabled\").\n",
+    "   - High-pressure communications with non-standard sentence structures.\n",
+    "   - Team-specific codes and references.\n",
     "\n",
     "4. **Better handling of domain-specific language**: RoBERTa's robust pretraining makes it more adaptable to specialized domains like motorsport communications.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### RoBERTa´s model architecture\n",
+    "\n",
+    "\n",
+    "\n",
+    "RoBERTa (Robustly Optimized BERT Pretraining Approach) maintains the core Transformer architecture of BERT while introducing several key optimizations:\n",
+    "\n",
+    "#### Core Components\n",
+    "\n",
+    "1. **Input Processing**:\n",
+    "   - **RoBERTaFastTokenizer**: Efficiently converts text into tokens using Byte-Pair Encoding.\n",
+    "   - **Citation Re-insertion**: Handles special tokens and formatting.\n",
+    "\n",
+    "2. **Encoder Stack**:\n",
+    "   - **Transformer Blocks**: 12 blocks (base) or 24 blocks (large) providing bidirectional context.\n",
+    "   - Each block contains multi-head self-attention and feed-forward neural networks.\n",
+    "\n",
+    "3. **Classification Head**:\n",
+    "   - **Concatenation**: Combines [CLS] token representation with optional metadata.\n",
+    "   - **Feature Processing**: Series of linear transformations with dropout layers for regularization.\n",
+    "   - **Output Layer**: Final linear projection and softmax activation producing class probabilities.\n",
+    "\n",
+    "<div align=\"center\">\n",
+    "  <img src=\"../NLP_radio_processing//images/The-RoBERTa-model-architecture.jpg\" alt=\"RoBERTa´s architecture\" width=\"500\"/>\n",
+    "</div>\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Key Architectural Improvements Compared to BERT\n",
+    "\n",
+    "- Removes BERT's Next Sentence Prediction (NSP) objective.\n",
+    "- Uses dynamic masking patterns during pretraining.\n",
+    "- Employs larger batch sizes and learning rates.\n",
+    "- Trains on 10× more data than BERT.\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Reference\n",
+    "*Context-Aware Legal Citation Recommendation using Deep Learning - Scientific Figure on ResearchGate. Available from: https://www.researchgate.net/figure/The-RoBERTa-model-architecture_fig2_352642553 [accessed 11 Mar 2025]*\n",
     "\n",
     "---\n",
     "\n",
