--- a/scripts/NLP_radio_processing/N03_bert_sentiment.ipynb
+++ b/scripts/NLP_radio_processing/N03_bert_sentiment.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sentiment Analysis for F1 Radio Messages: RoBERTa-base with Fine-tuning\n",
+    "## 1. Sentiment Analysis for F1 Radio Messages: RoBERTa-base with Fine-tuning\n",
     "\n",
     "### Why RoBERTa-base?\n",
     "\n",
@@ -99,8 +99,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Import necessary libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +119,7 @@
     }
    ],
    "source": [
-    "# Cell 1: Import necessary libraries\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import torch\n",
@@ -136,14 +143,14 @@
    "source": [
     "---\n",
     "\n",
-    "### Loading the RoBERTa model and also the tokenizer.\n",
+    "## 3. Loading the RoBERTa model and also the tokenizer.\n",
     "\n",
     "First, we need to download the RoBERTa model, with its correspondant tokenizer."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +303,7 @@
    "source": [
     "---\n",
     "\n",
-    "### Creating the training, validation and test split.\n",
+    "## 4. Creating the training, validation and test split.\n",
     "\n",
     "I´ll follow the same splits techniques during the project, making a training, validation and test dataset.\n",
     "\n",
@@ -307,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +363,7 @@
    "source": [
     "---\n",
     "\n",
-    "## Next Step: Tokenizing\n",
+    "## 5. Next Step: Tokenizing\n",
     "\n"
    ]
   },
@@ -373,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +589,7 @@
    "source": [
     "---\n",
     "\n",
-    "## Set up training process\n",
+    "## 6. Set up training process\n",
     "\n",
     "\n",
     "### Why 4 Epochs for Fine-tuning?\n",
@@ -604,14 +611,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimizer and scheduler configured for 4 epochs\n"
+      "Optimizer and scheduler configured for 6 epochs\n"
      ]
     },
     {
@@ -624,9 +631,10 @@
     }
    ],
    "source": [
-    "# Cell 6: Set up training parameters and optimizer\n",
     "# Training hyperparameters\n",
-    "epochs = 4\n",
+    "# FIRST RUN: epochs = 4\n",
+    "# SECOND RUN\n",
+    "epochs = 6\n",
     "warmup_steps = 0\n",
     "learning_rate = 2e-5\n",
     "weight_decay = 0.01\n",
@@ -659,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,14 +693,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting training for 4 epochs\n",
+      "Starting training for 6 epochs\n",
       "Training on 384 samples\n",
       "Validating on 80 samples\n"
      ]
@@ -719,15 +727,93 @@
    "source": [
     "--- \n",
     "\n",
-    "## Training loop"
+    "## 7. Training loop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Cell 7.5: Implement class weights\n",
+    "\n",
+    "In the **second run of the code**, I will implement class weights to try to manage the class imbalance that I have.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class weights:\n",
+      "Class 0: 3.5333\n",
+      "Class 1: 0.4667\n",
+      "Class 2: 1.7418\n"
+     ]
+    }
+   ],
    "source": [
+    "from sklearn.utils.class_weight import compute_class_weight\n",
+    "\n",
+    "# Get unique classes and compute weights\n",
+    "unique_labels = np.unique(train_labels.numpy())\n",
+    "class_weights = compute_class_weight('balanced', classes=unique_labels, y=train_labels.numpy())\n",
+    "class_weights = torch.tensor(class_weights, dtype=torch.float).to(device)\n",
+    "\n",
+    "print(\"Class weights:\")\n",
+    "for i, weight in enumerate(class_weights):\n",
+    "    print(f\"Class {i}: {weight:.4f}\")\n",
+    "\n",
+    "# Update loss function with weights\n",
+    "loss_fn = torch.nn.CrossEntropyLoss(weight=class_weights)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch 1/6\n",
+      "  Training loss: 1.1163\n",
+      "  Training time: 0:00:05\n",
+      "\n",
+      "Epoch 2/6\n",
+      "  Training loss: 1.0955\n",
+      "  Training time: 0:00:05\n",
+      "\n",
+      "Epoch 3/6\n",
+      "  Training loss: 1.0531\n",
+      "  Training time: 0:00:05\n",
+      "\n",
+      "Epoch 4/6\n",
+      "  Training loss: 0.9067\n",
+      "  Training time: 0:00:05\n",
+      "\n",
+      "Epoch 5/6\n",
+      "  Training loss: 0.6475\n",
+      "  Training time: 0:00:05\n",
+      "\n",
+      "Epoch 6/6\n",
+      "  Training loss: 0.4973\n",
+      "  Training time: 0:00:05\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Then in  training loop, replace model's internal loss calculation with:\n",
+    "\n",
+    "# logits = outputs.logits\n",
+    "# loss = loss_fn(logits, b_labels)\n",
+    "\n",
     "total_t0 = time.time()\n",
     "\n",
     "for epoch_i in range(epochs):\n",
@@ -748,15 +834,28 @@
     "        model.zero_grad()\n",
     "        \n",
     "        # Forward pass\n",
-    "        outputs = model(\n",
-    "            b_input_ids,\n",
-    "            attention_mask=b_attention_mask,\n",
-    "            labels=b_labels\n",
-    "        )\n",
+    "\n",
     "        \n",
+    "        # #############FIRST RUN#############\n",
+    "        # outputs = model(\n",
+    "        #     b_input_ids,\n",
+    "        #     attention_mask=b_attention_mask,\n",
+    "        #     labels=b_labels\n",
+    "        # )\n",
+    "        #####################################\n",
+    "        \n",
+    "        ########## SECOND RUN ###########\n",
+    "        outputs = model(b_input_ids, \n",
+    "                        attention_mask=b_attention_mask)\n",
+    "        \n",
+    "        logits = outputs.logits\n",
+    "        loss = loss_fn(logits, b_labels)\n",
     "        # Get loss and update total\n",
-    "        loss = outputs.loss\n",
+    "       \n",
     "        total_train_loss += loss.item()\n",
+    "        ###########################\n",
+    "\n",
+    "        \n",
     "        \n",
     "        # Backward pass and update\n",
     "        loss.backward()\n",
@@ -776,12 +875,12 @@
    "source": [
     "---\n",
     "\n",
-    "## Validation Loop\n"
+    "## 8. Validation Loop\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,21 +897,55 @@
     "        b_attention_mask = batch[1].to(device)\n",
     "        b_labels = batch[2].to(device)\n",
     "        \n",
-    "        # Forward pass\n",
-    "        outputs = model(\n",
-    "            b_input_ids,\n",
-    "            attention_mask=b_attention_mask,\n",
-    "            labels=b_labels\n",
-    "        )\n",
+    "        ######## FIRST RUN ##########\n",
+    "        # # Forward pass\n",
+    "        # outputs = model(\n",
+    "        #     b_input_ids,\n",
+    "        #     attention_mask=b_attention_mask,\n",
+    "        #     labels=b_labels\n",
+    "        # )\n",
     "        \n",
+    "        # \n",
+    "        # loss = outputs.loss\n",
+    "        # logits = outputs.logits\n",
+    "        ##############################\n",
+    "\n",
+    "\n",
+    "        ########## SECOND RUN ##############\n",
     "        # Get loss and predictions\n",
-    "        loss = outputs.loss\n",
-    "        logits = outputs.logits\n",
+    "        outputs = model(b_input_ids, \n",
+    "                        attention_mask=b_attention_mask)\n",
     "        \n",
+    "        logits = outputs.logits\n",
+    "\n",
+    "        loss = loss_fn(logits, b_labels)\n",
+    "\n",
+    "\n",
+    "\n",
     "        # Calculate metrics\n",
     "        val_loss += loss.item()\n",
     "        val_accuracy += flat_accuracy(logits.cpu().numpy(), b_labels.cpu().numpy())\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Validation accuracy: 0.7850\n",
+      "  Validation loss: 0.5231\n",
+      "  Saved new best model with accuracy: 0.7850\n",
+      "Training complete! Total time: 0:00:30\n",
+      "Best validation accuracy: 0.7850\n"
+     ]
+    }
+   ],
+   "source": [
     "# Calculate averages\n",
     "avg_val_accuracy = val_accuracy / len(val_dataloader)\n",
     "avg_val_loss = val_loss / len(val_dataloader)\n",
@@ -831,11 +964,114 @@
     "# Save best model\n",
     "if avg_val_accuracy > best_val_accuracy:\n",
     "    best_val_accuracy = avg_val_accuracy\n",
-    "    torch.save(model.state_dict(), 'best_roberta_sentiment_model.pt')\n",
+    "    torch.save(model.state_dict(), '../../outputs/week4/models/best_roberta_sentiment_model.pt')\n",
     "    print(f\"  Saved new best model with accuracy: {best_val_accuracy:.4f}\")\n",
     "\n",
     "print(f\"Training complete! Total time: {format_time(time.time() - total_t0)}\")\n",
     "print(f\"Best validation accuracy: {best_val_accuracy:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  F1 score (weighted): 0.8425\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import f1_score\n",
+    "\n",
+    "# In validation loop:\n",
+    "predictions = np.argmax(logits.cpu().numpy(), axis=1)\n",
+    "labels = b_labels.cpu().numpy()\n",
+    "f1 = f1_score(labels, predictions, average='weighted')\n",
+    "print(f\"  F1 score (weighted): {f1:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# After validation:\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Collect all predictions and labels\n",
+    "all_preds = []\n",
+    "all_labels = []\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    for batch in val_dataloader:\n",
+    "        b_input_ids = batch[0].to(device)\n",
+    "        b_attention_mask = batch[1].to(device)\n",
+    "        b_labels = batch[2].to(device)\n",
+    "        \n",
+    "        outputs = model(b_input_ids, attention_mask=b_attention_mask)\n",
+    "        logits = outputs.logits\n",
+    "        \n",
+    "        all_preds.extend(np.argmax(logits.cpu().numpy(), axis=1))\n",
+    "        all_labels.extend(b_labels.cpu().numpy())\n",
+    "\n",
+    "# Create confusion matrix\n",
+    "cm = confusion_matrix(all_labels, all_preds)\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues',\n",
+    "            xticklabels=['positive', 'neutral', 'negative'],\n",
+    "            yticklabels=['positive', 'neutral', 'negative'])\n",
+    "plt.xlabel('Predicted')\n",
+    "plt.ylabel('True')\n",
+    "plt.title('Confusion Matrix')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### First result\n",
+    "  - Validation accuracy: 0.7233\n",
+    "  - Validation loss: 0.6376\n",
+    "\n",
+    "Not that bad, but can improve. For that, I´m going to try to implement weights to compensate class imbalance and also add more metrics, like f1-score and confussion matrix.\n",
+    "\n",
+    "Due to the fast training (only took 1 minute), I will also add more epochs, from 4 to 6, being careful about overfitting.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "### Second result: Analysis of Improved Results\n",
+    "\n",
+    "The increase from 72.33% to 78.50% accuracy represents a significant improvement, especially considering your highly imbalanced dataset. \n",
+    "\n",
+    "**Why the Improvement Occurred**\n",
+    "The implementation of class weights was the key factor. By giving the model stronger signals for the underrepresented classes (particularly positive sentiment at only 9.4% of samples), the model is now better at recognizing all three sentiment categories rather than defaulting to the majority class.\n",
+    "\n",
+    "**The change in loss function was particularly important**:\n",
+    "\n",
+    "Without weights, the model optimizes for overall accuracy, which it can achieve by mostly predicting \"neutral\"\n",
+    "With weights, the model treats mistakes on minority classes as more costly, forcing it to learn their patterns better\n",
+    "\n",
+    "**What 78.5% Accuracy Means in Context**\n",
+    "For a 3-class sentiment problem with this level of imbalance, 78.5% is quite good:\n",
+    "\n",
+    "- Industry benchmarks: General sentiment analysis on balanced datasets typically achieves 75-85% accuracy.\n",
+    "\n",
+    "- With my constraints: Limited data (530 samples) + significant imbalance + specialized F1 domain terminology.\n",
+    "\n",
+    "- Random baseline: ~33% for balanced classes, but only about 55% if always predicting \"neutral\" in your case."
    ]
   }
  ],
