deleted some comments

--- a/scripts/NLP_radio_processing/N03_bert_sentiment.ipynb
+++ b/scripts/NLP_radio_processing/N03_bert_sentiment.ipynb
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
     "    'negative': 2\n",
     "}\n",
     "\n",
-    "# Apply mapping (adjust this based on your actual sentiment values)\n",
+    "\n",
     "df['label'] = df['sentiment'].map(sentiment_mapping)\n",
     "\n",
     "# Check if we need to handle any missing mappings\n",
@@ -606,7 +606,7 @@
     "\n",
     "5. **Learning Rate Schedule**: Our linear warmup and decay schedule is designed for a short fine-tuning process of approximately 3-5 epochs.\n",
     "\n",
-    "If you want to optimize further, you could implement early stopping based on validation performance, but 4 epochs generally provides a good balance of adaptation and generalization for sentiment analysis tasks.\n"
+    "\n"
    ]
   },
   {
@@ -1146,7 +1146,7 @@
     "- F1 score (weighted): 0.8425\n",
     "\n",
     "\n",
-    "The increase from 72.33% to 78.50% accuracy represents a significant improvement, especially considering your highly imbalanced dataset. \n",
+    "The increase from 72.33% to 78.50% accuracy represents a significant improvement, especially considering my highly imbalanced dataset. \n",
     "\n",
     "**Why the Improvement Occurred**\n",
     "The implementation of class weights was the key factor. By giving the model stronger signals for the underrepresented classes (particularly positive sentiment at only 9.4% of samples), the model is now better at recognizing all three sentiment categories rather than defaulting to the majority class.\n",
@@ -1163,7 +1163,7 @@
     "\n",
     "- With my constraints: Limited data (530 samples) + significant imbalance + specialized F1 domain terminology.\n",
     "\n",
-    "- Random baseline: ~33% for balanced classes, but only about 55% if always predicting \"neutral\" in your case.\n",
+    "- Random baseline: ~33% for balanced classes, but only about 55% if always predicting \"neutral\" in my case.\n",
     "\n",
     "#### For next run\n",
     "\n",
@@ -1245,7 +1245,7 @@
     "The latest second run shows remarkable improvement over all previous attempts.\n",
     "\n",
     "### Understanding This Improvement\n",
-    "The nearly 90% accuracy you've achieved is exceptional, especially considering:\n",
+    "The nearly 90% accuracy I've achieved is exceptional, especially considering:\n",
     "\n",
     "- My dataset has only 530 samples total\n",
     "- The severe class imbalance (71.5% neutral, 19.1% negative, 9.4% positive)\n",
@@ -1271,7 +1271,7 @@
     "\n",
     "### What This Means For the  Project\n",
     "\n",
-    "I´ve not only met but significantly exceeded your 85% accuracy target. This model should provide reliable sentiment classifications for the F1 radio messages, with strong performance across all three sentiment classes.\n",
+    "I´ve not only met but significantly exceeded my 85% accuracy target. This model should provide reliable sentiment classifications for the F1 radio messages, with strong performance across all three sentiment classes.\n",
     "\n",
     "The F1 score of 80.70% confirms the model is handling the class imbalance effectively, though there may be a slight trade-off compared to the previous run's 84.25%.\n",
     "\n"
@@ -1565,7 +1565,7 @@
     "Compared to VADER, the metrics have been greatly improved. There is (and there was) no doubt that this model performs much better in this task than this sentiment analyzer.\n",
     "\n",
     "## Test Set Performance\n",
-    "The model achieves excellent results on the test set, with 87.50% accuracy and a weighted F1 score of 87.46%. This significantly exceeds your target of 85% accuracy, demonstrating the effectiveness of the fine-tuning approach and hyperparameter choices.\n",
+    "The model achieves excellent results on the test set, with 87.50% accuracy and a weighted F1 score of 87.46%. This significantly exceeds my target of 85% accuracy, demonstrating the effectiveness of the fine-tuning approach and hyperparameter choices.\n",
     "\n",
     "--- \n",
     "\n",
