finished labeling the intention data

--- a/scripts/NLP_radio_processing/N04_radio_info.ipynb
+++ b/scripts/NLP_radio_processing/N04_radio_info.ipynb
@@ -342,6 +342,15 @@
     "display(vbox)\n",
     "display_current_message()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## Step 3: Training an intent classifier"
+   ]
   }
  ],
  "metadata": {
